--- a/Frontend/web-client/src/App.css
+++ b/Frontend/web-client/src/App.css
@@ -11,6 +11,97 @@
     margin-left: 20px;
 }
 
+
+/* ------ result box ---- */
+@media (min-width: 1300px) {
+.movies {
+        max-width: 360px !important;
+        display: inline-block !important;
+    }
+}
+
+.card {
+    height: 500px;
+}
+
+
+
+.card:hover {
+    background-color: #F8F9FA;
+    cursor: pointer;
+}
+
+
+/* ------- rating ------- */
+.rating {
+    display: inline-block;
+    position: relative;
+    height: 50px;
+    line-height: 50px;
+    font-size: 30px;
+}
+
+.rating label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    cursor: pointer;
+}
+
+.rating label:last-child {
+    position: static;
+}
+
+.rating label:nth-child(1) {
+    z-index: 5;
+}
+
+.rating label:nth-child(2) {
+    z-index: 4;
+}
+
+.rating label:nth-child(3) {
+    z-index: 3;
+}
+
+.rating label:nth-child(4) {
+    z-index: 2;
+}
+
+.rating label:nth-child(5) {
+    z-index: 1;
+}
+
+.rating label input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.rating label .icon {
+    float: left;
+    color: transparent;
+}
+
+.rating label:last-child .icon {
+    color: #000;
+}
+
+.rating:not(:hover) label input:checked ~ .icon,
+.rating:hover label:hover input ~ .icon {
+    color: #F6BE00;
+}
+
+.rating label input:focus:not(:checked) ~ .icon:last-child {
+    color: #000;
+    text-shadow: 0 0 5px #09f;
+}
+
+
+
+
 /* ------ login form ---- */
 .form-signin {
     width: 100%;
@@ -288,3 +379,18 @@
         opacity: 0;
     }
 }
+
+
+/* ----------- search box ------------- */
+.search-bar {
+    margin-left: 10px;
+    width: 44em;
+
+}
+
+input[type="search"] {
+    text-indent: 15px;
+}
+
+
+/* ------- show one movie ------ */
